--- a/home.html
+++ b/home.html
@@ -312,7 +312,7 @@
             padding-mobile-bottom30 padding-desktop-top80
              padding-desktop-bottom70">
                 <div class="title padding-mobile-bottom10
-                padding-desktop-bottom20">Types of painting</div>
+                padding-desktop-bottom20">Types of arts</div>
                 <div class="underline"></div>
             </div>
             <section class="of-c-container three-column-layout">
