--- a/home.html
+++ b/home.html
@@ -303,7 +303,7 @@
     <!-- our painting cards end -->
     
 
-    <!-- our fecilities start -->
+    <!-- our types of art start -->
 
     <div class="of-container">
         <div class="of-center wraper padding-mobile-bottom30 
@@ -367,7 +367,7 @@
         </div>
     </div>
 
-    <!-- our fecilities end -->
+    <!-- our types of art end -->
 
     <!-- contact pramotion section start -->
     <div class="contact-pramotion-main">
@@ -375,7 +375,7 @@
             <div class="section-title  padding-mobile-top40 padding-mobile-bottom30
               padding-desktop-top80 padding-desktop-bottom70">
                 <h3 class=" h3 title padding-mobile-bottom10 padding-desktop-bottom20">contact us
-                    for your future collection of arts</h3>
+                    for your future collection of art</h3>
                 <div class="underline"></div>
             </div>
             <div class="contact-pramotion-content padding-mobile-bottom40 
